# voxelizer

./: README.md
dadstuts/: CMakeLists.txt  main.cpp
dadstuts/examples/: samp.h5  scale_off.py
dadstuts/examples/input/: 4.off
dadstuts/examples/output/: 2.off  3.off  4.off
davidstuts/: README.md
davidstuts/examples/: fill_occupancy.py  filled.h5
examples/: occ_to_off.py
examples/input/: 0.off  1.off  2.off  3.off
examples/output/: 1.off
gpu-vox/: CMakeLists.txt
gpu-vox/src/: main.cpp  thrust_operations.cu  util.h  util_io.cpp  util_io.h  voxelize.cu
